@@ -50,6 +50,10 @@ Problems corrected in 3.9.7.
 8)  The LOGBURST and LOGLIMIT options in shorewall.conf now work
     correctly
 
+9)  Previously, COMMENT lines could result in invalid iptables-restore
+    input being generated. The quote marks around the comment string 
+    were being removed during iptables-restore input generation.
+
 Other changes in Shorewall 3.9.7.
 
 1)  Shorewall-perl now validates all IP addresses and addresses ranges
